<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_weight="2"
        android:layout_gravity="center"
        android:text="@string/jbus_login"
        android:textSize="48sp"
        android:gravity="center"
        android:id="@+id/title"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_marginHorizontal="26dp">

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            tools:ignore="VisualLintTextFieldSize" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:minHeight="48dp"
            tools:ignore="VisualLintTextFieldSize" />

        <Button
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#08BCAB"
            android:paddingHorizontal="16dp"
            android:paddingVertical="12dp"
            android:text="@string/login"
            android:textAllCaps="true"
            android:textColor="@color/white"
            app:cornerRadius="21dp"
            tools:ignore="VisualLintButtonSize" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="14dp"
            android:gravity="center"
            android:paddingTop="10dp"
            android:text="Don't have an account?"
            android:textAlignment="center"
            android:textColor="#000000" />
        <TextView
            android:id="@+id/register_now"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="14dp"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:paddingHorizontal="16dp"
            android:text="@string/register_now"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textStyle="bold"/>

    </LinearLayout>
</LinearLayout>